[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "git-xray-cli"
version = "0.1.0"
description = "Reveal hidden risks in any git repository — bus factor, hotspots, hidden coupling, knowledge decay, complexity trends"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["git", "analysis", "bus-factor", "code-quality", "devtools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Version Control :: Git",
]

[project.scripts]
git-xray = "git_xray.__main__:main"

[project.urls]
Homepage = "https://github.com/bot-anica/git-xray"
Repository = "https://github.com/bot-anica/git-xray"
Issues = "https://github.com/bot-anica/git-xray/issues"
