[metadata]
name = git-xray-cli
version = 0.1.2
description = Reveal hidden risks in any git repository
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Version Control :: Git

[options]
packages = git_xray
python_requires = >=3.9

[options.entry_points]
console_scripts =
    git-xray = git_xray.__main__:main
